<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">E-Paprykarz</string>
    <string name="navigation_drawer_open">Otwórz menu boczne</string>
    <string name="navigation_drawer_close">Zamknij menu boczne</string>
    <string name="application_describes" tools:ignore="Typos">E-Paprykarz to aplikacja mobilna stworzona z myślą o plantatorach z Potworowskiego Zagłębia Paprykowego. Aplikacja pozwoli usprawnić pracę każdego ogrodnika, który zajmuje się uprawą tego jakże cenionego warzywa. Posiada ona szereg funkcji między innymi specjalistyczne kalkulatory ogrodnicze, dziennik dochodów a także  możliwość zaplanowania zabiegu pielęgnacyjnego oraz wiele wiele innych funkcjonalności, które pomogą w wykonywaniu codziennych czynności w gospodarstwie!\nAplikacja została wykonana w ramach pracy inżynierskiej\nRadom 2022</string>
    <string name="describes_home">Witaj w aplikacji E-Paprykarz!\nPrzed tobą menu główne, wciśniej jeden z kafelków aby poznać kolejne funkcjonalności aplikacji!</string>
    <string name="describes_farm">Przed tobą podstawowe dane gospodarstwa, którym zarządzasz. Możesz edytować je korzystając z ikonki edycji znajdującym się obok danej informacji. Dochody oraz wydatki będą obliczane na podstawie uzupełnianych danych w dzienniku dochodów.</string>
    <string name="describes_about_application">Jak sama nazwa wskazuje tutaj dowiesz się co tak naprawdę wykonuje aplikacja, którą pobrałeś!</string>
    <string name="describes_calculators">Aplikacja oferuje 3 kalkulatory dzięki, którym będziesz mógł obliczyć powierzchnie działki, którą być może niedawno kupiłeś, obliczyć dokładną ilość sadzonek papryki w poszczególnym tunelu czy obliczyć dokładne proporcję pestycydu oraz wody, za pomocą, których wykonasz potem zabieg ochronny.</string>
    <string name="describes_calculator_of_field">Kalkulator pola powierzchni działki to jeden z kalkulatorów, który oferuje nasza aplikacja. Podaj, co ważne w metrach, długość oraz szerokość działki, po czym wybierz jednostkę, w której chcesz otrzymać wynik!</string>
    <string name="describes_calculator_of_plants">Kalkulator sadzonek to kolejny z kalkulatorów, który stworzył twórca aplikacji. Wybierz wymiary folii oraz używając suwaka odległość sadzonki od sadzonki. Algorytm obliczy ile potrzebujesz rozsady do każdego tunelu foliowego.</string>
    <string name="describes_calculator_of_concentration">Kalkulator cieczy roboczej to ostatni z kalkulatorów oferowany przez aplikację E-Paprykarz! Zaprogramowany kalkulator obliczy ilość wody oraz pestycydu jaką musisz przygotować do sporządzenia cieczy roboczej. Podaj jak długo rośnie w tunelu twoja papryka, wybierz używając suwaka liczbę tuneli do opryskania, wpisz zalecaną dawkę pestycydu oraz wybierz jednostkę zalecanej dawki. </string>
    <string name="describes_notes">Zarządzając gospodarstwem rolnym warto zapisywać pewne rzeczy. W tym module aplikacji będziesz mógł zapisać podstawowe daty związane z produkcją papryki, oraz tworzyć, edytować, usuwać lub przeglądać swoje notatki.</string>
    <string name="describes_basic_date">Jak sama nazwa wskazuje, w tej części aplikacji możesz zapisać podstawowe daty związane z produkcją papryki. Klikając na zielony przycisk obok poszczególnej rubryki możesz zapisać datę. Na podstawie daty zasadzenia obliczany będzie wiek papryki wykorzystywany podczas planowania zabiegu pielęgnacyjnego.</string>
    <string name="describes_add_note">Proces dodawania notatki jest bardzo prosty! Wciśnij przycisk plus znajdujący się obok okręgu aby wybrać ikonę najlepiej pasującą do treści twojej notatki. Wpisz tytuł, datę oraz treść notatki. To wszystko! Możesz również wybrać datę z kalendarza, który ukaże się po wciśnięciu na przycisk znajdujący się obok miejsca na wpisanie daty.</string>
    <string name="describes_my_note">Tutaj znajdziesz wszystkie notatki które stworzyłeś. Klikając na ikonki edycji lub usunięcia znajdujące się na każdej notatce możesz edytować lub usuwać notatki.</string>
    <string name="describes_operations">W tym module możesz zaplanować zabieg pielęgnacyjny, który potem będzie ukazany w dzienniku zabiegów. Jeśli chcesz zapoznać się z dozwolonymi środkami ochrony papryki przejdź do sekcji katalog pestycydów.</string>
    <string name="describes_plan_operations">W tej części aplikacji możesz zaplanować zabieg pielęgnacyjny! Wybierz rodzaj pestycydu, datę oraz godzinę planowanego zabiegu, ilość tuneli do opryskania oraz co najważniejsze pestycyd. Aplikacja godzinę przed zaplanowaną datą powiadomi cię abyś rozpoczął przygotowania.</string>
    <string name="describes_catalog_of_operations">Dziennik zabiegów pozwoli Ci zapoznać się z zaplanowanymi zabiegami pielęgnacyjnymi. Jeżeli na którejś z pozycji znajduje się zapis dotyczący trwania karencji, pamiętaj aby nie wykonywać żadnych prac w tunelu, a co najważniejsze nie zrywać papryki. Kliknij na przycisk szczegóły aby zapoznać się z bardziej dokładnymi informacjami na temat konkretnego zabiegu!</string>
    <string name="describes_details_of_operation">Tutaj znajdziesz wszystkie informację na temat konkretnego zabiegu pielęgnacyjnego. Jeżeli dzisiejsza data jest taka sama jak data zaplanowanego zabiegu, w polu obok statusu zabiegu ukaże się przycisk, dzięki któremu będziesz mógł zmienić status zabiegu na „Wykonano”. Klikając na przycisk instrukcja przygotowania cieczy roboczej możesz zapoznać się z takową instrukcją.</string>
    <string name="describes_instruction_of_operation">W tym miejscu znajdziesz szczegółową instrukcje przygotowania zabiegu pielęgnacyjnego. Pamiętaj, że używasz środków ochrony roślin, które są substancjami trującymi dla człowieka!</string>
    <string name="describes_catalog_of_pesticides">W tym miejscu znajdziesz katalog pestycydów z podziałem na środki owadobójcze, grzybobójcze oraz chwastobójcze. Kliknij na przycisk szczegóły aby zapoznać się z dokładnymi informacjami na temat konkretnego środka.</string>
    <string name="describes_details_of_pesticide">Ta część aplikacji pozwala zapoznać się z informacjami dotyczącymi danego pestycydu na temat zwalczanego szkodnika, zalecanej dawki, ilości dni karencji oraz zastosowania.</string>
    <string name="describes_control_of_water">Ten moduł pozwoli kontrolować proces nawadniania twojej plantacji papryki. Możesz zaplanować nawadnianie plantacji, przeprowadzić proces podlewania oraz zapoznać się ze zużyciem wody na przestrzeni kolejnych miesięcy bieżącego sezonu.</string>
    <string name="describes_water_plantation">W tym miejscu możesz zaplanować nawadnianie swojej plantacji. Podaj wydajność pompy w l/min. Aby odblokować możliwość edycji kliknij na przycisk obok oraz zapisz następnie nową wydajność klikając ponownie na ten sam przycisk. Podaj datę wpisując ją resztę lub korzystając z kalendarza znajdującego się w oknie dialogowym, które pokaże się po kliknięciu przycisku znajdującego się obok oraz co najważniejsze dodaj tury podlewania klikając na przycisk +.</string>
    <string name="describes_daily_of_watering">W dzienniku nawadniania znajdują się wszystkie zaplanowanie nawadniania. Każda pozycja zawiera informację na temat daty wykonania nawadniania, ilości nawadnianych tuneli, łącznego czasu nawadniania, wydajności pompy oraz zużycia wody. Klikając na ikonkę usuwania możesz usunąć zaplanowane nawadnianie. Kliknięcie na przycisk kranu pozwoli rozpocząć proces nawadniania.</string>
    <string name="describes_water_pepper">Kliknij na przycisk rozpocznij aby zacząć podlewać paprykę. Stoper jest uruchomiony w formie usługi działającej w tle, tak więc aplikacja nie musi być cały czas uruchomiona. Po zakończeniu kolejnych tur będziesz otrzymywał powiadomienia, które będą cie informowały abyś przekręcił zawory lub wyłączył pompę. Ponadto cały czas będziesz mógł w powiadomieniu podejrzeć pozostały czas. Biała ikonka z czerwonym kwadracikiem pozwoli przerwać proces nawadniania.</string>
    <string name="describes_usages_of_water">Poniższy wykres przedstawia zużycie wody w kolejnych miesiącach bieżącego sezonu.</string>
    <string name="describes_income_daily" tools:ignore="Typos">Bardzo ważną częścią życia każdego ogrodnika jest zarabianie pieniędzy. Aplikacja pozwoli zapanować nad przepływem gotówki w twoim gospodarstwie. Będziesz mógł zapisywać każdą transakcję sprzedaży plonów oraz wszelkie wydatki. Klikając w ostatni z przycisków otrzymasz zwięzły bilans zysków i strat oraz wszelkie statystyki, które pomogą ci w wyciąganiu pewnych wniosków!</string>
    <string name="describes_trade_of_pepper">W tym miejscu możesz zapisywać wszystkie transakcje, których dokonałeś, jako plantator papryki. Dzięki naszej aplikacji możesz tworzyć dziennik w, którym zapiszesz każdą sprzedaż z wyszczególnieniem: koloru, klasy papryki, stawki VAT, wagi, ceny, daty oraz miejsca sprzedaży. Możesz również edytować oraz usunąć każdą pozycję poprzez przyciski znajdujące się na każdej z pozycji.</string>
    <string name="descirbes_add_new_trade">Wypełnij poniższy prosty formularz aby dodać nową transakcję do twojego dziennika dochodów.</string>
    <string name="describes_outgoings">Twórca aplikacji zadbał również o prowadzenie dziennika wydatków. Klikając na plus znajdujący się na górnym pasku dodasz nową pozycję z uwzględnieniem kategorii, opisu, ceny oraz daty. Możesz również edytować oraz usunąć każdą pozycję dzięki poprzez przyciski znajdujące się na każdej z pozycji.</string>
    <string name="describes_add_outgoings">W tym miejscu możesz edytować lub dodać pozycję do dziennika wydatków. Pamiętaj, aby uzupełnić wszystkie komórki i podać prawidłowy format daty!</string>
    <string name="describes_balance">W tym miejscu uzyskasz wszelkie informację na temat dochodów oraz wydatków w bieżącym roku. Poniższy wykres przedstawia zaokrągloną do tysięcy zależność między zyskami a stratami.</string>
    <string name="describes_trade_statistics">Ukazana tabela przedstawia zestawienie sprzedaży papryki w bieżącym sezonie pod  względem różnych własności m.in. znajdziemy podział ze względu na kolor czy klasę  papryki. Ze wszystkimi parametrami zapoznaj się w przedstawionej tabeli.</string>
    <string name="describes_color_of_pepper">Ukazany wykres przedstawia procentową zależność sprzedanych kilogramów papryki w zależności od koloru.</string>
    <string name="describes_class_of_pepper">Ukazany wykres przedstawia procentową zależność sprzedanych kilogramów papryki w zależności od klasy.</string>
    <string name="describes_monthly_weight_from_pepper">Ukazany wykres przedstawia zależność ilości sprzedanych kilogramów papryki w zależności od miesiąca bieżącego sezonu.</string>
    <string name="describes_note_paragraph">Wszelkie materiały zawarte w aplikacji E-Paprkarz są objęte prawem autorskim i należą do autora aplikacji Kamila Porady. Zawarte treści podlegają ochronie na mocy Ustawy o prawie autorskim i prawach pokrewnych z dnia 4 lutego 1994.</string>
    <string name="describes_logo">Pomysłodawcą oraz twórcą zamieszczonego loga aplikacji jest Bartosz Płaza. Projekt został wykonany w programie do obróbki grafiki wektorowej\nAdobe Illustrator.</string>
    <string name="describes_pesticides">Wszelkie informacje zamieszczone w aplikacji na temat środków ochrony roślin pochodzą z katalogu\nProgram Ochrony Roślin Warzywnych na rok 2021.\nWydawnictwo Plantpress.</string>
    <string name="describes_market">Wszelkie informacje zamieszczone w aplikacji na temat nazwy, dokładnego położenia, adresu e-mail, numeru kontaktowego rynków hurtowych w Polsce pochodzą ze strony internetowej www.sprh.pl.</string>
    <string name="describes_icon">Ikony wykorzystane podczasz tworzenia aplikacji zostały wykorzystane dzięki uprzejmości strony internetowej www.freepik.com oraz wszystkich autorów którzy stworzyli konkretne ikony. Pozostała część ikon została zaczerpnięta z zasobów Googla udostępnianych narzędziu programistycznemu Android Studio.</string>
</resources>