<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@drawable/shape_bottom_dialog"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingTop="75dp"
        android:paddingEnd="5dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAlignment="center"
            android:text="NOTA PRAWNA"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/titlee"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/describes_note_paragraph"
            />

        <TextView
            android:id="@+id/titlee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/paragraph"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="WYKORZYSTANA WŁASNOŚĆ\nINTELEKTUALNA"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titlee"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/shape_black_rectangle"
            android:layout_margin="10dp"
            >

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="50dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/title_logo"
                app:layout_constraintBottom_toBottomOf="@id/title_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/icon_android"
                app:tint="@color/white"
                android:background="@drawable/shape_main_color_rectangle_with_black_stroke"
                />

            <TextView
                android:id="@+id/title_logo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/image_logo"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/describes_logo"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/first_block"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/shape_black_rectangle"
            android:layout_margin="10dp"
            >

            <ImageView
                android:id="@+id/image_pest"
                android:layout_width="50dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/title_pest"
                app:layout_constraintBottom_toBottomOf="@id/title_pest"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/icon_pest"
                app:tint="@color/white"
                android:background="@drawable/shape_main_color_rectangle_with_black_stroke"
                />

            <TextView
                android:id="@+id/title_pest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/image_pest"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/describes_pesticides"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/third_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/second_block"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/shape_black_rectangle"
            android:layout_margin="10dp"
            >

            <ImageView
                android:id="@+id/image_market"
                android:layout_width="50dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/title_market"
                app:layout_constraintBottom_toBottomOf="@id/title_market"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/icon_market"
                app:tint="@color/white"
                android:background="@drawable/shape_main_color_rectangle_with_black_stroke"
                />

            <TextView
                android:id="@+id/title_market"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/image_market"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/describes_market"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fourth_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/third_block"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/shape_black_rectangle"
            android:layout_margin="10dp"
            >

            <ImageView
                android:id="@+id/image_image"
                android:layout_width="50dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/title_image"
                app:layout_constraintBottom_toBottomOf="@id/title_image"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/icon_image"
                app:tint="@color/white"
                android:background="@drawable/shape_main_color_rectangle_with_black_stroke"
                />

            <TextView
                android:id="@+id/title_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/image_image"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/describes_icon"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="130dp"
            android:layout_height="50dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fourth_block"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="15dp"
            android:text="OK"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="-75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top"
        app:srcCompat="@drawable/shape_circle_paragraph"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
